# nginx-web

./: README.md  run-backend.sh  run-frontend.sh  run-simple.sh  run.sh  start.sh
backend/: .env  Cargo.toml  DEVELOPMENT.md  README.md  dependencies.py  main.py  pyproject.toml
backend/core/: nginx_directives.py  nginx_manager.py
backend/nginx-parser/: Cargo.toml
backend/nginx-parser/src/: lib.rs  nginx.pest
backend/routes/: nginx_routes.py
backend/src/: config.rs  main.rs
backend/src/api/: health.rs  load_balancer.rs  mod.rs  nginx_config.rs  traffic.rs
backend/src/models/: config.rs  mod.rs  server.rs  traffic.rs
backend/src/services/: nginx.rs
backend/src/utils/: file.rs  mod.rs  nginx.rs
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: ConfigEditor.tsx  ConfigManager.tsx  CreateConfigModal.tsx  Dashboard.tsx  Layout.tsx  LoadBalancer.tsx  NginxStatus.tsx  Sidebar.tsx  TrafficDashboard.tsx
frontend/src/components/config-editor/: GlobalDirectives.tsx  LocationBlock.tsx  ServerBlock.tsx  UpstreamBlock.tsx  VisualEditor.tsx
frontend/src/components/nodes/: LoadBalancerNode.tsx  ServerNode.tsx
frontend/src/store/: configStore.ts  nginxMetadataStore.ts
frontend/src/utils/: api.ts
scripts/: build.sh  deploy.sh  dev.sh
