[package]
name = "nginx-parser"
version = "0.1.0"
edition = "2021"
description = "A robust parser for Nginx configuration files"
authors = ["Nginx Manager Team"]

[dependencies]
# Parsing
nom = "8.0.0"
pest = "2.7.7"
pest_derive = "2.7.7"

# Error handling
thiserror = "2.0.0"
anyhow = "1.0.97"

# Utilities
regex = "1.10.3"
lazy_static = "1.4.0"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.25.0"
